[gd_scene load_steps=5 format=2]

[ext_resource path="res://scene/round/sleepy_box.gd" type="Script" id=1]
[ext_resource path="res://resource/texture/image/bg2.png" type="Texture" id=2]
[ext_resource path="res://resource/font/giant_font.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
resource_name = "exit_box"

[node name="stage" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
modulate = Color( 0.929412, 0.501961, 0.501961, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll" type="ScrollContainer" parent="margin"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1341.0
margin_bottom = 743.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="center" type="CenterContainer" parent="margin/scroll"]
margin_right = 1316.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="boxes" type="GridContainer" parent="margin/scroll/center"]
margin_left = 658.0
margin_top = 359.0
margin_right = 658.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 32
custom_constants/hseparation = 128
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="inside" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.25098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="center" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.25
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="vbox" type="VBoxContainer" parent="center"]
margin_left = 606.0
margin_top = 59.0
margin_right = 759.0
margin_bottom = 132.0

[node name="time" type="Label" parent="center/vbox"]
margin_right = 153.0
margin_bottom = 49.0
custom_fonts/font = ExtResource( 3 )
text = "@@:@@"
align = 1

[node name="exit_box" type="Button" parent="center/vbox"]
margin_top = 53.0
margin_right = 153.0
margin_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "#Rsleepybox_exit_box"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ani" type="AnimationPlayer" parent="."]
anims/exit_box = SubResource( 1 )

[node name="sectimer" type="Timer" parent="."]

[connection signal="pressed" from="center/vbox/exit_box" to="." method="_on_exit_box_pressed"]
[connection signal="timeout" from="sectimer" to="." method="_on_sectimer_timeout"]
